--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,9 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
-remote_theme : rowanoulton/galileo-theme
 # Site settings
-title: Predicting flight delays
-author: The Best
+title: Travelog
+author: Your name
 author_link: https://whatever.you/like
 author_description: A few words to describe you & your face
 email: your-email@domain.com
@@ -17,7 +16,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://https://github.com/980519kevin/thebest.github.io/" # the base hostname & protocol for your site
+url: "http://yourdomain.com" # the base hostname & protocol for your site
 
 # Picturefill
 # A responsive image polyfill: http://scottjehl.github.io/picturefill/
